<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!--输入框-->
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <!--  用户名  -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignBottom="@id/et_retrieve_account_number"
                android:layout_alignLeft="@id/et_retrieve_account_number"
                android:layout_alignStart="@id/et_retrieve_account_number"
                android:layout_alignTop="@id/et_retrieve_account_number"/>
            <EditText
                android:id="@+id/et_retrieve_account_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="40dp"
                android:hint="@string/payment_account_id"
                android:inputType="textPassword"
                android:textColorHint="#B3B3B3"
                android:textSize="16sp"
                android:theme="@style/MyEditText" />
        </RelativeLayout>

        <!--  用户名  -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignStart="@id/et_retrieve_job_number"
                android:layout_alignLeft="@id/et_retrieve_job_number"
                android:layout_alignTop="@id/et_retrieve_job_number"
                android:gravity="center"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/et_retrieve_job_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="40dp"
                android:hint="@string/payment_job_id"
                android:inputType="textPassword"
                android:textColorHint="#B3B3B3"
                android:textSize="16sp"
                android:theme="@style/MyEditText" />
        </RelativeLayout>

        <!--  用户名  -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/dept"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignBottom="@id/et_retrieve_dept"
                android:layout_alignLeft="@id/et_retrieve_dept"
                android:layout_alignStart="@id/et_retrieve_dept"
                android:layout_alignTop="@id/et_retrieve_dept"/>
            <EditText
                android:id="@+id/et_retrieve_dept"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="40dp"
                android:drawableRight="@drawable/arrow_down"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/payment_dept"
                android:textColorHint="#B3B3B3"
                android:textSize="16sp"
                android:theme="@style/MyEditText2" />
        </RelativeLayout>
    </LinearLayout>

    <!--登陆按钮-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_retrieve_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selectshape"
            android:text="@string/retrieve_password_btn"
            android:textColor="@color/white"
            android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_retrieve_retrun_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_login"
                android:textColor="#666666"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>