<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!--输入框-->
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_account_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="20dp"
            android:hint="@string/payment_account_id"
            android:inputType="textAutoComplete"
            android:paddingLeft="5dp"
            android:textColorHint="#B3B3B3"
            android:textSize="16sp"
            android:theme="@style/MyEditText" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="20dp"
            android:hint="@string/payment_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColorHint="#B3B3B3"
            android:textSize="16sp"
            android:theme="@style/MyEditText" />
    </LinearLayout>

    <!--登陆按钮-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginTop="26dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selectshape"
            android:text="@string/login_btn"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_login_register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/login_register_btn"
                android:textColor="#666666"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_login_forget_password_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login_password_btn"
                android:textColor="#666666"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>