<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:translationZ="1dp"
    tools:context=".ui.activity.MeasureActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/tv_label"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/body_temperature"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data"
            android:layout_marginRight="20px"
            android:textStyle="bold"
            android:textColor="@color/titleColor80"
            android:textSize="32sp"/>

        <ImageView
            android:id="@+id/iv_over"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/arrows"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10px"
            android:tint="@color/colorRed" />

        <TextView
            android:id="@+id/tv_over_tip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/uptitled"
            android:paddingTop="10dp"
            android:textColor="@color/colorRed"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/input_enter"
            android:textColor="@color/child_click_bg"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_before"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/before"
            android:gravity="center_vertical"
            android:textColor="@color/titleColor"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/ll_swith"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/iv_switchover"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:src="@drawable/refresh"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="4dp"
                android:visibility="gone"
                android:tint="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_swith"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/swith"
                android:textColor="@color/child_click_bg"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>