<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15sp"
    android:layout_marginTop="15sp"
    tools:ignore="MissingConstraints">

   <TextView
      android:id="@+id/tv_deleteLeft"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="16sp"
       android:text="@string/current_model"
       android:textColor="@color/titleColor80"
       app:layout_constraintLeft_toLeftOf="parent" />

   <TextView
       android:id="@+id/tv_deleteRight"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="16sp"
       android:text="@string/drag_tip"
       android:textColor="@color/titleColor80"
       app:layout_constraintRight_toRightOf="parent"/>

   <android.support.v7.widget.RecyclerView
       android:id="@+id/rv_delete"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:overScrollMode="never"
       android:fadingEdge="none"
       app:layoutManager="android.support.v7.widget.LinearLayoutManager"
       app:layout_constraintTop_toBottomOf="@+id/tv_deleteLeft"
       android:layout_marginTop="6dp"/>

   <TextView
      android:id="@+id/tv_add"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="16sp"
       android:text="@string/add_model"
       android:textColor="@color/titleColor80"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/rv_delete"
       android:layout_marginTop="15dp"/>

   <android.support.v7.widget.RecyclerView
       android:id="@+id/rv_add"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:overScrollMode="never"
       android:fadingEdge="none"
       app:layout_constraintTop_toBottomOf="@+id/tv_add"
       android:layout_marginTop="6dp"/>

</android.support.constraint.ConstraintLayout>