<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!--输入框-->
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <!--  新密码  -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/new_password"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingLeft="2dp"
                android:layout_alignBottom="@id/et_new_password"
                android:layout_alignLeft="@id/et_new_password"
                android:layout_alignStart="@id/et_new_password"
                android:layout_alignTop="@id/et_new_password"/>
            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="60dp"
                android:hint="@string/payment_new_password"
                android:inputType="textPassword"
                android:textColorHint="#B3B3B3"
                android:textSize="16sp"
                android:theme="@style/MyEditText" />
        </RelativeLayout>
    </LinearLayout>

    <!--登陆按钮-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_reset_password_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selectshape"
            android:text="@string/reset_password_login"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>