<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    tools:ignore="MissingDefaultResource,MissingConstraints">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cl_name"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/tv_nurse_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/nurse_signature"
            android:textColor="@color/titleColor"
            android:textSize="28sp" />


        <TextView
            android:id="@+id/tv_doctor_signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_nurse_signature"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:text="@string/doctor_signature"
            android:textColor="@color/titleColor"
            android:textSize="28sp" />


    </android.support.constraint.ConstraintLayout>



    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_nurse_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/no_data"
            android:textColor="@color/titleColor"
            android:textSize="28sp" />



        <TextView
            android:id="@+id/tv_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_nurse_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:text="@string/no_data"
            android:textColor="@color/titleColor"
            android:textSize="28sp" />

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>